File listing: fix date truncation

--- a/github-dark.css
+++ b/github-dark.css
@@ -288,6 +288,10 @@
   .inline-comment-form {
     max-width: 860px !important;
   }
+  /* File listings - fix date truncation */
+  table.files td.age .css-truncate {
+    max-width: none !important;
+  }
   /* Remove padding on the pre and add it to the spans inside the line to fix the row highlight */
   .blob-line-code pre, .line-data pre {
     padding-left: 0 !important;
